--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^2.2.4",
     "web3": "^1.10.4"
   },
   "devDependencies": {
